--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "blog",
-  "short_name": "blog",
+  "name": "Oak Island Subdivision Owners' Association",
+  "short_name": "Oak Island SOA",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
